--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-        applicationId "com.example.helloworld"
+        applicationId "com.example.uibasics"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
