--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WebsiteActivity"></activity>
-        <activity android:name=".CurrentlyReadingActivity" />
-        <activity android:name=".FavoriteActivity" />
-        <activity android:name=".WantToReadActivity" />
-        <activity android:name=".AlreadyReadBookActivity" />
-        <activity android:name=".BookActivity" />
-        <activity android:name=".AllBooksActivity" />
+        <activity android:name=".WebsiteActivity" />
+        <activity android:name=".CurrentlyReadingActivity"
+            android:label="@string/activity_currently_reading"/>
+        <activity android:name=".FavoriteActivity"
+            android:label="@string/activity_favorite_books"/>
+        <activity android:name=".WantToReadActivity"
+            android:label="@string/activity_want_to_read"/>
+        <activity android:name=".AlreadyReadBookActivity"
+            android:label="@string/activity_already_read"/>
+        <activity android:name=".BookActivity"
+            android:label="@string/activity_book"/>
+        <activity android:name=".AllBooksActivity"
+            android:label="@string/activity_all_books"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
